W-14150316: Relaxing add-modules tweaking check to accomodate for wrapperless mode.